# pet-project-financial-compass

./: .env.example  .gitignore  README.md  docker-compose.yml
analytics_service/: Dockerfile  pyproject.toml
analytics_service/alembic/: env.py
analytics_service/alembic/versions/: 00f3169bb956_add_budget_table.py
analytics_service/src/analytics_service/: config.py  database.py  main.py
analytics_service/src/analytics_service/api/v1/: analytics.py
analytics_service/src/analytics_service/models/: __init__.py  report.py
analytics_service/src/analytics_service/schemas/: __init__.py  analytics.py
analytics_service/src/analytics_service/services/: analytics.py  cache.py
auth_service/: Dockerfile  pyproject.toml
auth_service/alembic/: env.py
auth_service/alembic/versions/: e7c38f29a9af_add_user_avatar.py
auth_service/src/auth_service/: config.py  database.py  main.py
auth_service/src/auth_service/api/: deps.py
auth_service/src/auth_service/api/v1/: auth.py
auth_service/src/auth_service/models/: __init__.py  user.py
auth_service/src/auth_service/repositories/: user.py
auth_service/src/auth_service/schemas/: __init__.py  user.py
auth_service/src/auth_service/services/: auth.py  jwt.py
auth_service/src/auth_service/utils/: security.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
gateway/: Dockerfile  pyproject.toml
gateway/src/gateway/: config.py  main.py
gateway/src/gateway/middleware/: rate_limit.py
gateway/src/gateway/routes/: analytics.py  auth.py  transactions.py
(+61 files in other folders)
